// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DelightfulSplitter > Snapshot test > Basic splitter snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-splitter acss-1ms8eiu delightful-splitter-horizontal css-var-r1 delightful-splitter-css-var css-dev-only-do-not-override-yotw4n"
  >
    <div
      class="delightful-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      Left side content
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="50"
      class="delightful-splitter-bar"
      role="separator"
    >
      <div
        class="delightful-splitter-bar-dragger"
      />
    </div>
    <div
      class="delightful-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      右侧内容
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSplitter > Snapshot test > Complex content splitter snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-splitter acss-1ms8eiu delightful-splitter-horizontal css-var-r6 delightful-splitter-css-var css-dev-only-do-not-override-yotw4n"
  >
    <div
      class="delightful-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <h3>
        Left side title
      </h3>
      <p>
        Left side detailed content
      </p>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="50"
      class="delightful-splitter-bar"
      role="separator"
    >
      <div
        class="delightful-splitter-bar-dragger"
      />
    </div>
    <div
      class="delightful-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <h3>
        Right side title
      </h3>
      <p>
        Right side detailed content
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSplitter > Snapshot tests > Splitter with class name snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-splitter acss-1ms8eiu custom-splitter delightful-splitter-horizontal css-var-r3 delightful-splitter-css-var css-dev-only-do-not-override-yotw4n"
  >
    <div
      class="delightful-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      左侧内容
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="50"
      class="delightful-splitter-bar"
      role="separator"
    >
      <div
        class="delightful-splitter-bar-dragger"
      />
    </div>
    <div
      class="delightful-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      右侧内容
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSplitter > Snapshot tests > Splitter with class name snapshot 2`] = `
<DocumentFragment>
  <div
    class="delightful-splitter acss-1ms8eiu custom-splitter delightful-splitter-horizontal css-var-r5 delightful-splitter-css-var css-dev-only-do-not-override-yotw4n"
  >
    <div
      class="delightful-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      左侧内容
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="50"
      class="delightful-splitter-bar"
      role="separator"
    >
      <div
        class="delightful-splitter-bar-dragger"
      />
    </div>
    <div
      class="delightful-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      右侧内容
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSplitter > Snapshot tests > Splitter with custom styles snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-splitter acss-1ms8eiu delightful-splitter-horizontal css-var-r2 delightful-splitter-css-var css-dev-only-do-not-override-yotw4n"
    style="height: 400px;"
  >
    <div
      class="delightful-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      左侧内容
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="50"
      class="delightful-splitter-bar"
      role="separator"
    >
      <div
        class="delightful-splitter-bar-dragger"
      />
    </div>
    <div
      class="delightful-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      右侧内容
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSplitter > Snapshot tests > Splitter with custom styles snapshot 2`] = `
<DocumentFragment>
  <div
    class="delightful-splitter acss-1ms8eiu delightful-splitter-horizontal css-var-r4 delightful-splitter-css-var css-dev-only-do-not-override-yotw4n"
    style="height: 400px;"
  >
    <div
      class="delightful-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      左侧内容
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="50"
      class="delightful-splitter-bar"
      role="separator"
    >
      <div
        class="delightful-splitter-bar-dragger"
      />
    </div>
    <div
      class="delightful-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      右侧内容
    </div>
  </div>
</DocumentFragment>
`;
